lume/Lume_3D/test/unittest/assets/test_data/gltf/Invalid/Monster_invalid_bufferview.gltf
# This file was originally tracked by Git LFS but LFS tracking has been removed
version https://git-lfs.github.com/spec/v1
oid sha256:297d92ebd3a927b1b8ff0d3c68632951614e712634262af28caa575dcedafa7d
size 489447
